fix main card, align footer ad add color to the sides container

--- a/app/assets/stylesheets/components/_card_filter.scss
+++ b/app/assets/stylesheets/components/_card_filter.scss
@@ -4,7 +4,7 @@
   padding-top: 16px;
   padding-right: 16px;
   font-size:24px;
-  color: $black;
+  color: $green;
 
 }
 
