--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  padding-left: 24px;
 }
 
 .footer-links {
